# yandex-webmaster-mcp-server-for-api-v4-1

./: .env.example  .gitignore  README.md  pyproject.toml
src/yandex_webmaster_mcp/: client.py  server.py
